# SolanumVK

./: .gitignore  CMakeLists.txt  README.md  SolanumVK.sln  compile_shaders.bat
SolanumVK/: CommandBuffer.h  CommandManager.cpp  RenderingEngine.cpp  RenderingEngine.h  SolanumConstants.h  SolanumVK.vcxproj  SolanumVK.vcxproj.filters  VulkanContext.cpp  VulkanContext.h  WindowBridge.cpp  WindowBridge.h
assets/: greenMonke.glb  textureMappedTorus.glb  textureMappedTorusKnot.glb  vertexColorCube.glb
cmake/: FindFastGLTF.cmake  FindGLFW.cmake  FindGLM.cmake  FindSDL2.cmake  FindVkBootstrap.cmake
headers/: BufferAllocator.h  BufferResources.h  Camera.h  CommandManager.h  ComputePipeline.h  DescriptorLayoutBuilder.h  DescriptorSetAllocator.h  DescriptorWriter.h  IPipeline.h  ImageAllocator.h  ImageResources.h  MeshLoader.h  PresentSyncManager.h  RenderingEngine.h  SceneDescriptor.h  ScopedVkMemoryManager.h  ShaderLoader.h  SolanumConstants.h  Swapchain.h  VulkanContext.h  VulkanUtils.h  WindowBridge.h
headers/descriptors/: DescriptorLayoutBindings.h  DescriptorMemoryManager.h  DescriptorModule.h  DescriptorWriter.h
headers/meshes/: GPUMesh.h  MeshData.h  MeshLoader.h  (+7 more)
shaders/: gradient.comp  gradient.comp.spv  imageEffect.vert  imageEffect.vert.spv  invertImageEffect.frag  invertImageEffect.frag.spv  simpleMesh.frag  simpleMesh.frag.spv  simpleMesh.vert  simpleMesh.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv
src/: BufferAllocator.cpp  Camera.cpp  CommandManager.cpp  ComputePipeline.cpp  DescriptorLayoutBuilder.cpp  DescriptorSetAllocator.cpp  DescriptorWriter.cpp  ImageAllocator.cpp  ImageResources.cpp  PresentSyncManager.cpp  RenderingEngine.cpp  ScopedVkMemoryManager.cpp  ShaderLoader.cpp  VulkanContext.cpp  WindowBridge.cpp  main.cpp
(+46 files in other folders)
